# alpaca-code

evaluation-libraries/: .gitignore  README.md  build-everything.sh  run-everything.sh
evaluation-libraries/baseimage/: Dockerfile  Dockerfile-archlinux  Dockerfile-debian  build.sh  client.sh
evaluation-libraries/baseimage/certs/: generate-ca.sh
evaluation-libraries/bearssl/: CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  run.sh
evaluation-libraries/bearssl/client/: CMakeLists.txt  client.c  client.h
evaluation-libraries/bearssl/server/: CMakeLists.txt  server.c  server.h
evaluation-libraries/botan/: CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  run.sh
evaluation-libraries/botan/client/: CMakeLists.txt  client.cpp
evaluation-libraries/botan/cmake/: FindBotan2.cmake
evaluation-libraries/botan/server/: CMakeLists.txt  server.cpp  server.h
evaluation-libraries/gnutls/: CMakeLists.txt  Dockerfile  LICENSE  build.sh  docker-compose.yml  readme.md  run.sh
evaluation-libraries/gnutls/client/: CMakeLists.txt  client.c  examples.h  tcp.c
evaluation-libraries/gnutls/cmake/: FindGnuTLS.cmake  FindPackageHandleStandardArgs.cmake
evaluation-libraries/gnutls/server/: CMakeLists.txt  server.c  server.h
evaluation-libraries/golang/: Dockerfile  README.md  build.sh  docker-compose.yml  run.sh
evaluation-libraries/golang/client/: client.go  go.mod
evaluation-libraries/golang/server/: server.go
evaluation-libraries/java/: Dockerfile  LICENSE-java-getopt  README.md  build.sh  docker-compose.yml  run.sh
evaluation-libraries/java/client/: README.md  manifest
evaluation-libraries/java/client/src/: Client.java
evaluation-libraries/java/server/: manifest
evaluation-libraries/java/server/src/: Server.java
evaluation-libraries/mbedtls/: CMakeLists.txt  Dockerfile  README.md  build.sh  docker-compose.yml  run.sh
evaluation-libraries/mbedtls/client/: CMakeLists.txt  client.c
evaluation-libraries/mbedtls/server/: CMakeLists.txt  server.c
evaluation-libraries/openssl/: .gitignore  CMakeLists.txt  Dockerfile-boringssl  Dockerfile-openssl  README.md  build.sh  docker-compose-boringssl.yml  docker-compose.yml  run.sh
evaluation-libraries/openssl/client/: CMakeLists.txt  client.c  client.h
evaluation-libraries/openssl/server/: CMakeLists.txt  server.c  server.h
evaluation-libraries/rustls/: Cargo.toml  Dockerfile  README.md  build.sh  docker-compose.yml  run.sh
evaluation-libraries/rustls/client/: client.rs
evaluation-libraries/rustls/server/: server.rs
evaluation-libraries/wolfssl/: CMakeLists.txt  Dockerfile  LICENSE  README.md  build.sh  docker-compose.yml  run.sh
evaluation-libraries/wolfssl/client/: CMakeLists.txt  client.c  client.h
evaluation-libraries/wolfssl/server/: CMakeLists.txt  server.c  server.h
evaluation-servers/: .gitignore  README.md  build.sh
evaluation-servers/apache/: Dockerfile  apache.conf  build.sh  docker-compose.yml
evaluation-servers/courier/: Dockerfile  build.sh  docker-compose.yml  imapd-ssl  smtpd.conf  start.sh
evaluation-servers/cyrus/: Dockerfile  build.sh  cyrus.asc  cyrus.conf  docker-compose.yml  imapd.conf
evaluation-servers/dovecot/: Dockerfile  build.sh  docker-compose.yml
evaluation-servers/exim/: Dockerfile  build.sh  docker-compose.yml  exim.conf
evaluation-servers/filezilla-server/: Dockerfile  build.sh  docker-compose.yml
evaluation-servers/lighttpd/: Dockerfile  Dockerfile-mbedtls  build.sh  docker-compose.yml  lighttpd-mbedtls.conf  lighttpd.conf
evaluation-servers/nginx/: Dockerfile  build.sh  docker-compose.yml  nginx.conf
evaluation-servers/opensmtpd/: Dockerfile  build.sh  docker-compose.yml
evaluation-servers/postfix/: Dockerfile  build.sh  docker-compose.yml  main.cf  master.cf
evaluation-servers/proftpd/: Dockerfile  build.sh  docker-compose.yml  proftpd.conf  run.sh
evaluation-servers/pure-ftpd/: Dockerfile  build.sh  docker-compose.yml
evaluation-servers/sendmail/: Dockerfile  build.sh  docker-compose.yml  start.sh
evaluation-servers/vsftpd/: Dockerfile  build.sh  docker-compose.yml  start.sh  vsftpd.conf
exploits/ftp/: 01-pureftpd.md  02-proftpd.md  03-microsoft-ftp.md  04-vsftpd.md  05-filezilla.md  06-serv-u.md
exploits/imap/: 01-dovecot.md  02-courier.md  03-exchange.md  04-cyrus.md  05-kerio-connect.md  06-zimbra.md
exploits/pop3/: 01-dovecot.md  02-courier.md  03-exchange.md  04-cyrus.md  05-kerio-connect.md  06-zimbra.md
exploits/smtp/: 01-postfix.md  02-exim.md  03-sendmail.md  04-mailenable.md  05-mdaemon.md  06-opensmtpd.md
testlab/: .gitignore  README.md  setup.sh
testlab/mitmproxy/: main.py
testlab/mitmproxy/proxy/socket/: mitmsocket.py
testlab/mitmproxy/proxy/socket/protocols/: ftp.py  imap.py  imaps.py  pop3.py  pop3s.py  smtp.py
testlab/mitmproxy/utils/: common.py  logging.py  tls.py
testlab/scripts/: show_vsftp_log.sh
testlab/servers/: docker-compose.yml
testlab/servers/files/ftp-proftpd/: Dockerfile  proftpd.conf  tls.conf
testlab/servers/files/ftp-proftpd/bob/: payload.html
testlab/servers/files/ftp-vsftp/: Dockerfile  vsftpd.conf
testlab/servers/files/mail-courier/: Dockerfile  entrypoint.sh  mail.eml
testlab/servers/files/mail-cyrus/: Dockerfile  cyradm_commands  cyrus.conf  imapd.conf
testlab/servers/files/mail-cyrus/mails/: 1.eml  2.eml
testlab/servers/files/mail-sendmail/: Dockerfile  entrypoint.sh
testlab/servers/files/nginx-attacker/html/: index.html
testlab/servers/files/nginx-target/html/: index.php
(+7 files in other folders)
